force-app/main/default/objects/Dedupe_Interim_Clean_Up__mdt.object
<CustomObject>
    <fields>
        <fullName>Case_Sensitive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Case Sensitive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Value__c</fullName>
        <label>Current Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Name__c</fullName>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Value__c</fullName>
        <label>New Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type_Developer_Name__c</fullName>
        <label>Record Type Developer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type_Namespace_Prefix__c</fullName>
        <label>Record Type Namespace Prefix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Interim Field</fullName>
                    <default>true</default>
                    <label>Interim Field</label>
                </value>
                <value>
                    <fullName>Address Type</fullName>
                </value>
                <value>
                    <fullName>Phone Type</fullName>
                </value>
                <value>
                    <fullName>Email Type</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Dedupe Interim Clean-Up</label>
    <pluralLabel>Dedupe Interim Clean-Ups</pluralLabel>
</CustomObject>